k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-azure-demo
  labels:
    app: k8s-azure-demo
    env: prod
