k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-azure-demo
spec:
  rules:
    - host: k8s-azure-demo.local
